frontend/test/should_fail/computations_decl_use_calls_type_mismatch_func_003.grg
using model_init;

function func(-e:E1->) : Edge
{
	return(e);
}

rule r
{
	-e:Edge->;
	modify {
		eval {
			def -e1:Edge-> = func(e);
		}
	}
}

